<resources>
    <string name="app_name">CF_ChatApp</string>
    <string name="action_chats">Chat</string>
    <string name="contacts">Contacts</string>
    <string name="profile">Profile</string>

    <string name="facebook_app_id">1269442603474387</string>
    <string name="fb_login_protocol_scheme">fb1269442603474387</string>
    <string name="default_notification_channel_id">FCM mess channel</string>


    <string name="Wellcome">Wellcome</string>
    <string name="btnLogin">Login</string>
    <string name="requestAcount">" Do not have an account?"</string>
    <string name="Register">Register</string>
    <string name="type_your_infor">Type Your Information</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btnSignUp">Register</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="btnReset">Reset</string>
    <string name="note_reset_password">By clicking button, you will receive an email to reset your password!</string>
    <string name="back">Back</string>
    <string name="change_username">Change Username</string>
    <string name="sign_out">Sign Out</string>
    <string name="search_user">Search User</string>
    <string name="old_username">Old username</string>
    <string name="hint_new_username">New Username</string>
    <string name="oke">Oke</string>
    <string name="cancle">Cancle</string>
    <string name="hint_entermessage">Enter Message</string>
    <string name="change_profileImg">Change Profile Image</string>
    <string name="select_optional">Select Item</string>
    <string name="choose_image">Choose Picture</string>
    <string name="capture_picture">Capture Picture</string>
    <string name="chat">Chat</string>
    <string name="failed_no_image_selected">No Image selected</string>
    <string name="failed">Failed!</string>
    <string name="upload_progress">Upload in progress</string>
    <string name="seen">Seen</string>
    <string name="delivered">Delivered</string>
    <string name="failed_to_send_notification">Failed! to send notificaation</string>
    <string name="sent_a_picture">Sent a picture</string>
    <string name="notification_cant_register">Please enter your username, email or password to register</string>
    <string name="notification_passwordLength">password must be more than 6 characters</string>


</resources>