<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#2ab1e0"
    tools:context=".ResetPasswordActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarResetPass"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#2ab1e0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"></androidx.appcompat.widget.Toolbar>
    <EditText
        android:id="@+id/edtEmailReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edittext"
        android:hint="@string/hint_email"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarResetPass"
        ></EditText>
    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmailReset"
        android:layout_marginTop="10dp"
        android:text="@string/btnReset"></Button>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/btnReset"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/note_reset_password"></TextView>


</androidx.constraintlayout.widget.ConstraintLayout>